Revision history for Bot-BasicBot-Pluggable-Module-Crontab
==========================================================

        - fixes suggested by Kritika.io.
        - determine week number once.
        - extended test suite.

0.01    2015-04-27
        - original release.